# exkernel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  markdown.rs
src/commands/: completions.rs  fetch.rs  graph.rs  lint.rs  lookup.rs  mod.rs  new.rs  scope.rs  search.rs
