[package]
name = "exkernel"
version = "0.1.0"
edition = "2024"
description = "CLI for the Existential Kernel ontology framework"
license = "Apache-2.0"
repository = "https://github.com/existential-kernel/exkernel"
readme = "README.md"

[[bin]]
name = "exkernel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

[dev-dependencies]
tempfile = "3"
