[package]
name = "existence"
version = "0.3.1"
edition = "2024"
description = "CLI for the Existence ontology framework"
license = "Apache-2.0"
repository = "https://github.com/existence-lang/existence"
homepage = "https://github.com/existence-lang/existence"
readme = "README.md"
keywords = ["ontology", "cli", "knowledge-graph", "domain-modeling"]
categories = ["command-line-utilities"]

[[bin]]
name = "existence"
path = "src/main.rs"

[[bin]]
name = "xist"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

[dev-dependencies]
tempfile = "3"
